google search console

--- a/_posts/2023-08-05-welcome.md
+++ b/_posts/2023-08-05-welcome.md
@@ -1,3 +1,10 @@
-# 과연
+
+
+---
+title : 과연
+date : YYYY-MM-DD HH:MM:SS +/-TTTT
+categories : [TOP_CATEGORIE, SUB_CATEGORIE]
+tags : [tag] #소문자만 가능
+---
 
 hi
