google search console

--- a/_posts/2023-08-05-welcome.md
+++ b/_posts/2023-08-05-welcome.md
@@ -3,7 +3,7 @@
 ---
 title : 과연
 date : YYYY-MM-DD HH:MM:SS +/-TTTT
-categories : [TOP_CATEGORIE, SUB_CATEGORIE]
+categories : [hi, ih]
 tags : [tag] #소문자만 가능
 ---
 
