google search console

--- a/_posts/2023-08-05-welcome.md
+++ b/_posts/2023-08-05-welcome.md
@@ -1,10 +1,8 @@
-
-
 ---
-title : 과연
-date : YYYY-MM-DD HH:MM:SS +/-TTTT
-categories : [hi, ih]
-tags : [tag] #소문자만 가능
+title: 포스팅 제목
+date: YYYY-MM-DD HH:MM:SS +09:00
+categories: [cate, gory]
+tags: [ga1]
 ---
 
 hi
