--- a/_posts/2023-08-06-GitHub: 깃허브 블로그 만들기 (1).md
+++ b/_posts/2023-08-06-GitHub: 깃허브 블로그 만들기 (1).md
@@ -8,7 +8,9 @@ tags: [GitHub, Pages]
 ### 1. 깃허브 저장소 생성 
 `[username].github.io` 라는 이름으로 저장소를 생성한다
 ### 2. 로컬에서 저장소 클론
-`git clone https://github.com/[username]/[username].github.io`
+```
+git clone https://github.com/[username]/[username].github.io
+```
 
 명령으로 깃허브 저장소를 내 컴퓨터에
 ### 3. index.html 작성
