--- a/_posts/2023-08-07-GitHub: 깃허브 블로그 만들기 (2) 테마 적용하기.md
+++ b/_posts/2023-08-07-GitHub: 깃허브 블로그 만들기 (2) 테마 적용하기.md
@@ -65,10 +65,28 @@ https://github.com/cotes2020/jekyll-theme-chirpy/
 - social: email:
 - social: links: sns 링크
 - google_analytics:
-- avatar: 메인 아바타 이미지
+- avatar: 메인 아바타 이미지 (assets/[img 파일]/)
 
 ### local server 실행 (테스트 용)
 ```
 -
 bundle exec jekyll s
 ```
+
+
+### push
+master 로 push 를 하면 git actions 에 등록된 작업이 실행된다
+git actions 가 완료되면 페이지에 반영된다
+
+
+
+### 블로그 설정
+
+#### 구글 애널리틱스 연동
+
+#### 구글 애드센스 연동
+
+#### 구글 서치 콘솔 연동
+
+
+
