--- a/_posts/2023-08-07-GitHub: 깃허브 블로그 만들기 (3) 블로그 설정.md
+++ b/_posts/2023-08-07-GitHub: 깃허브 블로그 만들기 (3) 블로그 설정.md
@@ -15,13 +15,13 @@ utterances 를 사용하여 댓글 기능을 추가해준다
 https://github.com/apps/utterances
 에 접속 후 
 
-![img](../assets/img/img.png)
+![img](/assets/img/posts_images/img.png)
 
 Configure 를 클릭 
 
-![img_1](../assets/img/img_1.png)
+![img_1](/assets/img/posts_images/img_1.png)
 
-![img_2](../assets/img/img_2.png)
+![img_2](/assets/img/posts_images/img_2.png)
 
 원하는 저장소를 선택하여 등록한다
 
