--- a/_posts/2023-08-07-GitHub: 깃허브 블로그 만들기 (3) 블로그 설정.md
+++ b/_posts/2023-08-07-GitHub: 깃허브 블로그 만들기 (3) 블로그 설정.md
@@ -34,3 +34,11 @@ Configure 를 클릭
 _layouts/post.html 최 하단에 바깥 영역에
 utterances 설정에서 나온 html 코드를 복붙한다
 
+
+### 블로그 설정
+
+#### 구글 애널리틱스 연동
+
+#### 구글 애드센스 연동
+
+#### 구글 서치 콘솔 연동
