--- a/_posts/2023-08-07-GitHub: 깃허브 블로그 만들기 (2) 테마 적용하기.md
+++ b/_posts/2023-08-07-GitHub: 깃허브 블로그 만들기 (2) 테마 적용하기.md
@@ -78,15 +78,18 @@ bundle exec jekyll s
 master 로 push 를 하면 git actions 에 등록된 작업이 실행된다
 git actions 가 완료되면 페이지에 반영된다
 
+### etc.
 
+chirpy 테마에서 이미지 등록 시에는 
 
-### 블로그 설정
+ide 에서 이미지 미리보기가 되지 않는데
+```
+![img](/assets/img/posts_images/img.png)
+```
+위와 같은 형식으로 작성해줘야 한다
 
-#### 구글 애널리틱스 연동
+`/assets/`로 경로를 작성해줘야만 이미지를 찾을 수 있게 되어있다
 
-#### 구글 애드센스 연동
-
-#### 구글 서치 콘솔 연동
 
 
 
