--- a/_posts/2023-08-07-GitHub: 깃허브 블로그 만들기 (2) 테마 적용하기.md
+++ b/_posts/2023-08-07-GitHub: 깃허브 블로그 만들기 (2) 테마 적용하기.md
@@ -27,6 +27,7 @@ brew install rbenv ruby-build
 
 rbenv install [버전] // 맥에서는 2.6.0 버전이 기본으로 설정되어 있어서 다른 버전으로
 rbenv global [버전]
+rbenv versions // 확인
 ```
 
 ```
