--- a/_posts/2023-08-07-GitHub: 깃허브 블로그 만들기 (2) 테마 적용하기.md
+++ b/_posts/2023-08-07-GitHub: 깃허브 블로그 만들기 (2) 테마 적용하기.md
@@ -5,7 +5,7 @@ tags: [GitHub, Pages]
 published: true
 ---
 
-## 깃허브 Pages 테마 설정
+# 깃허브 Pages 테마 설정
 깃허브 pages 의 테마를 직접 만드는 것은
 꽤 많은 공수가 들어가니
 이미 만들어져 있는 테마를 사용하는 편이 좋을 것 같다
@@ -16,12 +16,12 @@ published: true
 http://jekyllthemes.org/
 http://jekyllthemes.org/themes/jekyll-theme-chirpy/
 
-### 환경 세팅
+## 환경 세팅
 
 Jekyll 를 사용하려면 ruby 가 설치되어 있어야 한다
 rbenv 를 설치해서 ruby 버전 관리도 함께 해준다
 
-#### ruby 설치
+## ruby 설치
 
 ```
 brew update
@@ -43,7 +43,7 @@ vi ~/.zshrc
 source ~/.zshrc
 ```
 
-### chirpy 테마 사용하여 블로그 만들기
+## chirpy 테마 사용하여 블로그 만들기
 
 https://github.com/cotes2020/jekyll-theme-chirpy/
 
@@ -53,7 +53,7 @@ https://github.com/cotes2020/jekyll-theme-chirpy/
 4. `[USERNAME].github.io` 폴더 내에서 `bash tools/init` 실행
 5. `[USERNAME].github.io` 폴더 내에서 `bundle` 실행
 
-### chirpy 설정
+## chirpy 설정
 폴더 내 _config.yml 파일을 수정해주면 된다
 
 - timezone: Asia/Seoul
@@ -70,18 +70,18 @@ https://github.com/cotes2020/jekyll-theme-chirpy/
 - google_analytics:
 - avatar: 메인 아바타 이미지 (assets/[img 파일]/)
 
-### local server 실행 (테스트 용)
+## local server 실행 (테스트 용)
 ```
 -
 bundle exec jekyll s
 ```
 
 
-### push
+## push
 master 로 push 를 하면 git actions 에 등록된 작업이 실행된다
 git actions 가 완료되면 페이지에 반영된다
 
-### etc.
+## etc.
 
 chirpy 테마에서 이미지 등록 시에는 
 
