--- a/_posts/2023-08-07-GitHub: 깃허브 블로그 만들기 (3) 블로그 설정.md
+++ b/_posts/2023-08-07-GitHub: 깃허브 블로그 만들기 (3) 블로그 설정.md
@@ -5,11 +5,11 @@ tags: [GitHub, Pages]
 published: true
 ---
 
-### 블로그 설정
+# 블로그 설정
 GitHub Pages 는 저장소를 웹으로 띄워주는 것이라
 다른 설정들을 직접 해줘야 한다
 
-#### Chirpy 테마 설정
+## Chirpy 테마 설정
 
 Chirpy 테마에는 댓글 기능이 없기 때문에
 utterances 를 사용하여 댓글 기능을 추가해준다
@@ -37,10 +37,10 @@ _layouts/post.html 최 하단에 바깥 영역에
 utterances 설정에서 나온 html 코드를 복붙한다
 
 
-### 블로그 설정
+## 블로그 설정
 
-#### 구글 애널리틱스 연동
+## 구글 애널리틱스 연동
 
-#### 구글 애드센스 연동
+## 구글 애드센스 연동
 
-#### 구글 서치 콘솔 연동
+## 구글 서치 콘솔 연동
