--- a/_posts/GItHub/Pages/2023-08-07-GitHub: 깃허브 블로그 만들기 (3) 블로그 설정.md
+++ b/_posts/GItHub/Pages/2023-08-07-GitHub: 깃허브 블로그 만들기 (3) 블로그 설정.md
@@ -21,7 +21,7 @@ https://github.com/apps/utterances
 
 Configure 를 클릭 
 
-![img_1](/assets/img/posts_images/img_1.png)
+![img_1.png](/assets/img/posts_images/img_1.png)
 
 ![img_2](/assets/img/posts_images/img_2.png)
 
