--- a/_posts/KNOU/PL/2023-09-15-KNOU: 프로그래밍 언어 | 프로그래밍 언어의 정의.md
+++ b/_posts/KNOU/PL/2023-09-15-KNOU: 프로그래밍 언어 | 프로그래밍 언어의 정의.md
@@ -1,7 +1,7 @@
 ---
 date : YYYY-MM-DD HH:MM:SS +09:00
-categories: [KNOU, Philosophy]
-tags: [Philosophy]
+categories: [KNOU, PL]
+tags: [PL]
 published: true
 ---
 
