--- a/_posts/KNOU/UNIX/2023-10-05-KNOU: 유닉스 시스템 | 03. 셸 사용하기.md
+++ b/_posts/KNOU/UNIX/2023-10-05-KNOU: 유닉스 시스템 | 03. 셸 사용하기.md
@@ -140,3 +140,47 @@ unalias 명령을 통해 단축 명령을 해제할 수 있다
 정보가 충분하지 않은 경우 탭 키를 한번 더 눌러 모든 경우를 볼 수 있다
 
 ## 명령의 연결과 확장
+### 특수 문자
+- 백슬래시 (/): 특수 문자의 기능을 제거하는 이스케이프 문자 또는 명령 행 분리에 사용
+- 틸드 (~): 홈 디렉터리를 의미
+- 도트 (.): 현재 작업 디렉토리 표시 또는 명령 행의 맨 앞에서 셀 스크립트를 실행하는 source 명령
+- 더블도트 (..): 부모 디렉토리
+- 파운드 (#): 주석
+- 달러 ($): $변수는 변수의 값을 추출한다
+- 앰퍼샌드 (&): 명령& 는 명령을 백그라운드로 실행
+- 애스터리스크 (*): 파일 이름에서 0개 이상의 임의 문자열과 대응됨
+- 물음표 (?): 파일 이름에서 1개 문자와 대응됨
+- 파이브 (|): 앞 명령의 출력을 다음 명령으로 연결시킴
+- < 또는 >: 파일로부터 입력 받거나 파일로 출력할 때 사용
+- `>>`: 표준 출력을 파일 끝에 덧붙일 때 사용
+- 느낌표 (!): 명령 히스토리 기능을 이용할 때 사용
+
+### 파이프
+`명령1 | 명령2`
+앞 출력 결과를 다음 명령의 입력으로 연결
+
+
+### 입출력 리다이렉션
+`명령 0< 파일`
+명령 수행에 필요한 입력을 파일로 부터 얻는다 
+
+`명령 1> 파일`
+명령 수행 결과를 파일에 기록한다
+
+위 입출력 리다이렉션들에서 숫자는 생략 가능
+
+`명령 2>> 파일`
+명령 수행 중 표준 오류 출력을 파일에 덧붙임
+
+입출력 리다이렉션 앞에 2를 붙이면 오류 출력을 의미한다
+
+### 명령 치환
+명령을 수행할 때 명령 인수로 다른 명령의 결과를 사용
+
+
+`$(command)` 또는 ``` \`command`\```
+-> 역 따옴표
+
+
+
+
