--- a/_posts/KNOU/DataStructure/2023-10-04-KNOU: 자료구조 | 02. 배열.md
+++ b/_posts/KNOU/DataStructure/2023-10-04-KNOU: 자료구조 | 02. 배열.md
@@ -132,7 +132,7 @@ ex) C언어
 0인 원소는 저장하지 않고 0이 아닌 값들만 따로 모아서 저장
 -> 메모리 낭비를 막고 효율성 또한 향상된다
 
-![Alt text](/Users/swk/Desktop/lumpenop.github.io/assets/img/posts_images/KNOU/DataStructure/sparse_matrix.png)
+![Alt text](/assets/img/posts_images/KNOU/DataStructure/sparse_matrix.png)
 
 2차원 배열로 값의 행과 열을 값으로 가지는 배열을 만든다 (좌표 값과 값을 갖는 배열)
 
