--- a/_posts/KNOU/DataStructure/2023-10-11-KNOU: 자료구조 | 03. 스택.md
+++ b/_posts/KNOU/DataStructure/2023-10-11-KNOU: 자료구조 | 03. 스택.md
@@ -20,12 +20,12 @@ published: true
 ## 스택의 추상자료형
 스택 객체: 0개 이상의 원소를 갖는 유한 순서 리스트
 
-![Alt text](/Users/swk/Desktop/lumpenop.github.io/assets/img/posts_images/KNOU/DataStructure/stack_create.png)
+![Alt text](/assets/img/posts_images/KNOU/DataStructure/stack_create.png)
 
 
-![Alt text](/Users/swk/Desktop/lumpenop.github.io/assets/img/posts_images/KNOU/DataStructure/stack_push.png)
+![Alt text](/assets/img/posts_images/KNOU/DataStructure/stack_push.png)
 
-![Alt text](/Users/swk/Desktop/lumpenop.github.io/assets/img/posts_images/KNOU/DataStructure/stack_pop.png)
+![Alt text](/assets/img/posts_images/KNOU/DataStructure/stack_pop.png)
 
 스택은 연산이 제한적이다
 
