--- a/_posts/KNOU/DataStructure/2023-10-11-KNOU: 자료구조 | 03. 스택.md
+++ b/_posts/KNOU/DataStructure/2023-10-11-KNOU: 자료구조 | 03. 스택.md
@@ -34,7 +34,7 @@ published: true
 
 스택에 max size 를 주면 더이상 데이터를 받지 않는다
 
-![Alt text](/Users/swk/Desktop/lumpenop.github.io/assets/img/posts_images/KNOU/DataStructure/stack_full_emfty.png)
+![Alt text](/assets/img/posts_images/KNOU/DataStructure/stack_full_emfty.png)
 
 ## 스택의 응용
 - 변수에 대한 메모리의 할당과 수집을 위한 시스템 스택
