--- a/_posts/KNOU/PL/2023-09-25-KNOU: 프로그래밍 언어 | 02. 프로그래밍 언어의 발전과 동작원리.md
+++ b/_posts/KNOU/PL/2023-09-25-KNOU: 프로그래밍 언어 | 02. 프로그래밍 언어의 발전과 동작원리.md
@@ -191,8 +191,8 @@ CPU 에 종속적 -> 이식성이 거의 없다
 - 유연성
 - 이식성
 
-![Alt text](/Users/swk/Desktop/lumpenop.github.io/assets/img/posts_images/KNOU/PL/standard_table.png)
-![Alt text](/Users/swk/Desktop/lumpenop.github.io/assets/img/posts_images/KNOU/PL/conflict_table.png)
+![Alt text](/assets/img/posts_images/KNOU/PL/standard_table.png)
+![Alt text](/assets/img/posts_images/KNOU/PL/conflict_table.png)
 
 서로 상충되는 평가 기준이 있기 떄문에
 트레이드 오프 관계인 경우가 있어 완벽한 프로그래밍 언어는 없다
