--- a/_posts/GItHub/Git/2023-08-08-Git: fork 해온 저장소를 새 저장소로 옮기기.md
+++ b/_posts/GItHub/Git/2023-08-08-Git: fork 해온 저장소를 새 저장소로 옮기기.md
@@ -1,7 +1,12 @@
 ---
 date : YYYY-MM-DD HH:MM:SS +09:00
 categories: [GitHub, Git]
+tags: [Git]---
+date : YYYY-MM-DD HH:MM:SS +09:00
+categories: [GitHub, Git]
 tags: [Git]
+published: true
+---
 published: true
 ---
 
