--- a/_posts/GItHub/Git/2024-01-11-Git 다시 시작: 원격 브랜치.md
+++ b/_posts/GItHub/Git/2024-01-11-Git 다시 시작: 원격 브랜치.md
@@ -37,3 +37,35 @@ HEAD 가 분리된 채로 커밋이 된다
 주의! 분리된 HEAD 상태라는 경고가 뜬다
 
 ### git fetch
+깃의 원격 작업은 서로 다른 저장소의 데이터를
+주고 받는 것이다
+
+원격 저장소에서 데이터를 가져올 때 fetch 를 사용한다
+원격 저장소의 상태가 변하면 원격 브랜치는 작업을 반영한다
+
+fetch 는 두 가지 작업을 수행한다
+- 원격 저장소에는 있지만 로컬에 없는 커밋들을 다운 받는다
+- 원격 브랜치(origin) 가 가리키는 곳을 최신으로 업데이트 한다
+
+이는 로컬에서 원격 저장소와의 연결을 최신으로 업데이트 하는 것
+
+git fetch 는 원격 저장소에 인터넷 프로토콜을 통해 접근한다
+
+fetch 가 로컬 상태에는 관여하지 않는다
+fetch 는 원격 저장소의 작업 트리를 다운로드 하는 것으로 이해하면 된다
+
+fetch 를 통해 원격 저장소의 커밋들을 받았다면 일반 브랜치 처럼 활용할 수 있다
+
+merge, rebase, cherry-pick 등으로 다른 브랜치와 병합하여 변경 사항을 local 에 업데이트 하면 된다
+
+### git pull
+git fetch 이후 병합하는 과정은
+너무 빈번히 발생하는 작업이기 때문에
+이 둘을 한번에 하는 기능을 제공하는데 그게 pull 이다
+
+```
+git pull <원격 저장소 이름> <해당 저장소의 브랜치 이름>
+```
+git pull 명령은
+fetch 이후 merge 를 할지 rebase 를 할지 설정해줄 수 있다
+
