--- a/_posts/GItHub/Git/2024-01-11-Git 다시 시작: 원격 브랜치.md
+++ b/_posts/GItHub/Git/2024-01-11-Git 다시 시작: 원격 브랜치.md
@@ -69,3 +69,22 @@ git pull <원격 저장소 이름> <해당 저장소의 브랜치 이름>
 git pull 명령은
 fetch 이후 merge 를 할지 rebase 를 할지 설정해줄 수 있다
 
+### git push 
+로컬의 커밋들을 원격 저장소에 업로드 하는 것
+
+매개변수 없이 사용하는 push 는 
+git 설정인 push.default 에 따라 결정된다
+
+push 를 하기 전에 원격 저장소에 다른 작업이 올라와있는지 확인하고 pull 한 이후 
+local 브랜치와 병합, push 해야 한다
+
+```
+git pull --rebase
+```
+rebase 옵션을 주어 일회성으로 사용할 수도 있다
+
+
+
+
+
+
